[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lorentzian_bands"
version = "0.0.1"
authors = [
  { name="David Dams", email="david.dams@kit.edu" },
]
description = "script for band structures of 1D lorentzian scatterers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'jax',
  'jaxlib',
  'matplotlib',
  'mpmath',
]